2013-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	[doc] Drop "~/.alive.d/" in config item examples.

	* doc/alive.texi (hosts, period): ...here.

2013-08-06  Thien-Thi Nguyen  <ttn@gnu.org>

	Add homepage / "gethelp" to ‘--help’ output.

	* src/body.scm <--help>: ...here.

2012-09-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 2.0.1

	* configure.ac (AC_INIT): Bump version to "2.0.1" for release.

2012-09-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Use texinfo.tex from gnulib.

	* autogen.sh: Also copy gnulib's build-aux/texinfo.tex.

2012-09-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Display "using: TOOL-VERSION-INFO" first.

	* autogen.sh: Don't maintain tool versions in comments.
	Instead, display "using: TOOL-VERSION-INFO" first,
	for guile, snuggle, gnulib-tool, autoconf and automake.

2012-09-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Add appendix "GNU Software".

	* doc/alive.texi (GNU Software): New node/appendix.
	(Top): Add "GNU Software" to menu.
	(Features): Replace footnotes for GNU Inetutils
	and GNU Guile w/ ‘GNU Software’ pxrefs.
	(Phase 1): Likewise, for GNU Autoconf and GNU Automake.
	(Invoking alive): Likewise, for GNU Bash.

2012-08-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Add some @cindex entries.

	* doc/alive.texi (Features, Phase 1, Invoking alive)
	(Configuration, Generally Sexp-ing, hosts, period):
	Add @cindex entries.

2012-08-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix typo: Spell "received" correctly.

	* doc/alive.texi (Invoking alive): Spell "received" correctly.

2012-08-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use email address for bug reports.

	* configure.ac (AC_INIT): Use email address for bug reports.

2012-08-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 2.0.0

	* configure.ac (AC_INIT): Bump version to "2.0.0" for release.

2012-08-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Decruft: Drop URLs for phase 1 peers.

	* doc/alive.texi (Top): Remove ‘Phase 1 Peers’ from menu.